--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
+    "coveralls": "^2.11.14",
     "documentation": "^4.0.0-beta11",
     "eslint": "^3.7.1",
     "expect": "^1.20.2",
